# OpenVR-Capture

./: README.md
plugins/win-openvr/: CMakeLists.txt  win-openvr.cpp
plugins/win-openvr/data/: win-openvr-presets.ini
